# Gemma-Trading

./: .gitignore  Agent.py  Cargo.toml  LT.html  README.md  ST.html  btcusdt.db  dashboard.html  equity_curve.csv  token.txt
src/: backtest.rs  bingx.rs  dashboard.rs  db.rs  indicators.rs  live.rs  llm.rs  main.rs  types.rs
